src/Lexer.c
/* Generated by re2c 1.3 on Tue Feb 23 14:29:06 2021 */
#line 1 "Lexer.re"
#include <stdlib.h>
#include <stdio.h>
#include <string.h>
#include <stdbool.h>

#include "Utilities.h"
#include "PinkError.h"
#include "Token.h"
#include "Location.h"
#include "Lexer.h"


Lexer* CreateLexer()
{
  Lexer* lxr = (Lexer*)calloc(1, sizeof(Lexer));
  lxr->buf      = NULL;
  lxr->yych     = 0;
  lxr->end      = lxr->cursor = lxr->token = lxr->marker = lxr->buf;
  lxr->yyaccept = 0;
  lxr->state    = -1;
  return lxr;
}

void DestroyLexer(Lexer* lexer)
{
    free(lexer->buf);
    free(lexer);
}


void yySetBuffer(Lexer* lexer, char* text, int len)
{
    if (lexer->buf != NULL)
        free(lexer->buf);
    lexer->buf    = (char*)calloc(sizeof(char), len);
    lexer->buf    = strncpy(lexer->buf, text, len);
    lexer->cursor = lexer->marker = lexer->mrkctx = lexer->token = lexer->buf;
    lexer->end    = lexer->buf + len;
}


char* yyText(Lexer* lexer)
{
    // pointer arithmetic is not black magic!
    // 1 number per char, regardless of the
    // upper bound, the bytes between cursor
    // (a.k.a. the end of the token.) and
    // token (a.k.a. the beginning of the token)
    // is the number of characters between
    // the two, a.k.a the length of the token.
    // [-] is one byte [----] is a word
    // "---- ---- ---- ----" is some string of
    // length 15, but this works with any length (n).
    // (held within 16 bytes.)
    //      "---- ---- ---- ----"
    //          ^        ^
    //          t        c
    // if we count the number of chars between (t, c)
    // we get 8. now, given our knowledge that a pointer
    // is the address of some character. (because it's a
    // character pointer) we know that our pointers contain
    // some integer value which can be used as an index into
    // memory to retrieve some value of type char. (which has
    // size one remember, and 4 chars make a word, and machines
    // are word addressed.) much like the idea of our pointer
    // as an index into the character array, the physical
    // representation of this index into a character array is
    // the exact same physical representation as an index
    // into our memory space.
    // so, what do you get when you
    // subtract the two indexes from eachother (t, c)?
    // you get the distance between the two, in terms of
    // the underlying type. (char is easy because it is
    // quite literally defined to be both length 1, w.r.t
    // the size of everything in a C program, and to be
    // the length of one byte of memory, on essentially
    // all modern machines, because of the nice tricks it allows.)
    // so truly the question we need to ask to ensure we don't
    // get a negative length is which pointer is the smaller number?
    // luckily we read the documentation of re2c
    // and so we know that cursor is the seeking pointer, i.e. it
    // is bumped along the string as we lex each character,
    // and we know that token is the beginning of our current token.
    // hence, cursor is always greater than or equal to token.
    // all you need to know more than this about pointer arithmetic
    // is that all of this is in terms of n elements of size m.
    // where char is our anchor/bridge between the machine and
    // our type system.
    // we think arrays and pointers into arrays as
    // offsets, however we multiply by the size of each element
    // first, to convert from byte indexing to element indexing.
    //
    // notice how this is essentially the same thing as scale conversion!
    // we talk about the size of every type in terms of how many bytes
    // it takes to store an object/entity of that type. (where char is
    // the bridge between bytes and the type system.)
    //
    // if that is confusing, thing of some magical struct
    // of size 10, (in bytes remember), if we want an array of
    // ten of these how much memory do we need?
    // 10 (size of struct) * 10 (number of elements) = 100 (bytes)
    // and, where is the sixth struct within the array?
    // 10 (size of struct) * 6  (which element we want/index) = 60 (th byte)
    // hence, the array derefrence operator is exactly the same as
    // adding some number to a pointer to construct a new pointer.
    // and, the dot operator is also pointer arithmetic in disguise.
    // if a struct is ten bytes, composed of five members each of
    // size two bytes, then to access the third member means accessing
    // the two bytes immediately following the first four bytes of the structure.
    return dupnstr(lexer->token, lexer->cursor - lexer->token);
}

Location* yyLloc(Lexer* lexer)
{
    return &(lexer->yylloc);
}

void updatelloc(Location* llocp, char* token, int len)
{
    llocp->first_line   = llocp->last_line;
    llocp->first_column = llocp->last_column;

    for (int i = 0; i < len; i++)
    {
        if (token[i] == '\n')
        {
            llocp->last_line++;
            llocp->last_column = 1;
        }
        else
            llocp->last_column++;
    }
}


#line 140 "Lexer.re"


#define YYPEEK() *lexer->cursor
#define YYSKIP() ++(lexer->cursor)
#define YYBACKUP() lexer->marker = lexer->cursor
#define YYRESTORE() lexer->cursor = lexer->marker
#define YYBACKUPCTX() lexer->mrkctx = lexer->cursor
#define YYRESTORECTX() lexer->cursor = lexer->mrkctx
#define YYLESSTHAN(n) (lexer->end - lexer->cursor) < n

int yyLex(Lexer* lexer)
{
    LOOP:
    lexer->token = lexer->cursor;
    
#line 155 "Lexer.c"
{
	char yych;
	yych = YYPEEK ();
	switch (yych) {
	case '\t':
	case '\n':
	case ' ':	goto yy4;
	case '!':
	case '$':
	case '%':
	case '&':
	case '*':
	case '+':
	case '/':
	case '>':
	case '@':
	case '^':
	case '|':
	case '~':	goto yy6;
	case '(':	goto yy9;
	case ')':	goto yy11;
	case '-':	goto yy13;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy14;
	case ':':	goto yy17;
	case ';':	goto yy19;
	case '<':	goto yy21;
	case '=':	goto yy22;
	case 'A':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'g':
	case 'h':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 'u':
	case 'v':
	case 'x':
	case 'y':
	case 'z':	goto yy23;
	case 'B':	goto yy26;
	case 'I':	goto yy27;
	case 'N':	goto yy28;
	case '\\':	goto yy29;
	case 'd':	goto yy31;
	case 'e':	goto yy32;
	case 'f':	goto yy33;
	case 'i':	goto yy34;
	case 'n':	goto yy35;
	case 't':	goto yy36;
	case 'w':	goto yy37;
	default:
		if (YYLESSTHAN (1)) {
			goto yyeof;
		}
		goto yy2;
	}
yy2:
	YYSKIP ();
yy3:
#line 159 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_ERR; }
#line 257 "Lexer.c"
yy4:
	YYSKIP ();
#line 161 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); goto LOOP; }
#line 262 "Lexer.c"
yy6:
	YYSKIP ();
	yych = YYPEEK ();
yy7:
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '*':
	case '+':
	case '-':
	case '/':
	case ':':
	case '<':
	case '=':
	case '>':
	case '@':
	case '^':
	case '|':
	case '~':	goto yy6;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy8;
	}
yy8:
#line 184 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_OPERATOR; }
#line 292 "Lexer.c"
yy9:
	YYSKIP ();
#line 175 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_LPAREN; }
#line 297 "Lexer.c"
yy11:
	YYSKIP ();
#line 176 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_RPAREN; }
#line 302 "Lexer.c"
yy13:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy8;
	case '>':	goto yy38;
	default:	goto yy7;
	}
yy14:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy14;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy16;
	}
yy16:
#line 167 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_INTEGER; }
#line 336 "Lexer.c"
yy17:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '*':
	case '+':
	case '-':
	case '/':
	case ':':
	case '<':
	case '>':
	case '@':
	case '^':
	case '|':
	case '~':	goto yy6;
	case '=':	goto yy40;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy18;
	}
yy18:
#line 170 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_COLON; }
#line 365 "Lexer.c"
yy19:
	YYSKIP ();
#line 177 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_SEMICOLON; }
#line 370 "Lexer.c"
yy21:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy8;
	case '-':	goto yy42;
	default:	goto yy7;
	}
yy22:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy8;
	case '>':	goto yy44;
	default:	goto yy7;
	}
yy23:
	YYSKIP ();
	yych = YYPEEK ();
yy24:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy23;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	}
yy25:
#line 185 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_IDENTIFIER; }
#line 469 "Lexer.c"
yy26:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'o':	goto yy46;
	default:	goto yy24;
	}
yy27:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'n':	goto yy47;
	default:	goto yy24;
	}
yy28:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'i':	goto yy48;
	default:	goto yy24;
	}
yy29:
	YYSKIP ();
#line 169 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_BSLASH; }
#line 507 "Lexer.c"
yy31:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'o':	goto yy49;
	default:	goto yy24;
	}
yy32:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'l':	goto yy51;
	case 'n':	goto yy52;
	default:	goto yy24;
	}
yy33:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'a':	goto yy53;
	default:	goto yy24;
	}
yy34:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'f':	goto yy54;
	default:	goto yy24;
	}
yy35:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'i':	goto yy56;
	default:	goto yy24;
	}
yy36:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'h':	goto yy57;
	case 'r':	goto yy58;
	default:	goto yy24;
	}
yy37:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'h':	goto yy59;
	default:	goto yy24;
	}
yy38:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '*':
	case '+':
	case '-':
	case '/':
	case ':':
	case '<':
	case '=':
	case '>':
	case '@':
	case '^':
	case '|':
	case '~':	goto yy6;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy39;
	}
yy39:
#line 172 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_RARROW; }
#line 615 "Lexer.c"
yy40:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '*':
	case '+':
	case '-':
	case '/':
	case ':':
	case '<':
	case '=':
	case '>':
	case '@':
	case '^':
	case '|':
	case '~':	goto yy6;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy41;
	}
yy41:
#line 174 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_COLONEQ; }
#line 644 "Lexer.c"
yy42:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '*':
	case '+':
	case '-':
	case '/':
	case ':':
	case '<':
	case '=':
	case '>':
	case '@':
	case '^':
	case '|':
	case '~':	goto yy6;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy43;
	}
yy43:
#line 173 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_LARROW; }
#line 673 "Lexer.c"
yy44:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '*':
	case '+':
	case '-':
	case '/':
	case ':':
	case '<':
	case '=':
	case '>':
	case '@':
	case '^':
	case '|':
	case '~':	goto yy6;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy45;
	}
yy45:
#line 171 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_EQRARROW; }
#line 702 "Lexer.c"
yy46:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'o':	goto yy60;
	default:	goto yy24;
	}
yy47:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 't':	goto yy61;
	default:	goto yy24;
	}
yy48:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'l':	goto yy63;
	default:	goto yy24;
	}
yy49:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy23;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy50;
	}
yy50:
#line 182 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_DO; }
#line 811 "Lexer.c"
yy51:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 's':	goto yy65;
	default:	goto yy24;
	}
yy52:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'd':	goto yy66;
	default:	goto yy24;
	}
yy53:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'l':	goto yy68;
	default:	goto yy24;
	}
yy54:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy23;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy55;
	}
yy55:
#line 178 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_IF; }
#line 920 "Lexer.c"
yy56:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'l':	goto yy69;
	default:	goto yy24;
	}
yy57:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'e':	goto yy71;
	default:	goto yy24;
	}
yy58:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'u':	goto yy72;
	default:	goto yy24;
	}
yy59:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'i':	goto yy73;
	default:	goto yy24;
	}
yy60:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'l':	goto yy74;
	default:	goto yy24;
	}
yy61:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy23;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy62;
	}
yy62:
#line 168 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_TYPE_INT; }
#line 1051 "Lexer.c"
yy63:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy23;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy64;
	}
yy64:
#line 163 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_TYPE_NIL; }
#line 1127 "Lexer.c"
yy65:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 'e':	goto yy76;
	default:	goto yy24;
	}
yy66:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy23;
	default:
		if (YYLESSTHAN (1)) {
		}
		goto yy67;
	}
yy67:
#line 183 "Lexer.re"
	{ updatelloc(&(lexer->yylloc), lexer->token, lexer->cursor - lexer->token); return T_END; }
#line 1214 "Lexer.c"
yy68:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 0x00:
		if (YYLESSTHAN (1)) {
		}
		goto yy25;
	case 's':	goto yy78;
	default:	goto yy24;
	}
yy69:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
